[package]
name = "ssb-legacy-msg-data"
version = "0.1.1"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
base64 = "0.11.0"
indexmap = "1.3.1"
ryu-ecmascript = "0.1.1"
# strtod = "0.0.2"
strtod = { git = "https://github.com/leo-lb/strtod" }
encode_unicode = "0.3.6"
